[package]
name        = "lumen"
version     = "1.0.0"
edition     = "2021"
description = "LUMEN Rust acceleration layer (PyO3)"
license     = "Apache-2.0"

[lib]
name       = "lumen_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.21", features = ["extension-module"] }
flate2 = "1.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
