[package]
name        = "ulmen"
version     = "1.0.2"
edition     = "2021"
description = "ULMEN Rust acceleration layer (PyO3)"
license     = "Apache-2.0"

[lib]
name       = "ulmen_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3   = { version = "0.21", features = ["extension-module", "abi3-py310"] }
flate2 = "1.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
